--- a/css/styles.css
+++ b/css/styles.css
@@ -1,15 +1,24 @@
+:root{
+    --primary-bg-color: #f0d1d1;
+    --secondary-bg-color: #2c0c21; /* header */
+    --primary-font-color: #fff;
+}
+
 body {
     font-family: 'Times New Roman', Times, serif;
-    margin: 0;
-    padding: 0;
-    background-color: #f0d1d1;
+    margin: 0px;
+    padding: 0px;
+    background-color: var(--primary-bg-color);
 }
 
-h1 {
+header {
     text-align: center;
-    background-color: #2c0c21;
-    color: #fff;
-    padding: 20px;
+    background-color: var(--secondary-bg-color);
+    color: var(--primary-font-color);
+    padding: 20px 0;
     margin: 0;
 }
 
+header h1 {
+    margin: 0;
+}
