--- a/css/styles.css
+++ b/css/styles.css
@@ -22,3 +22,15 @@ header {
 header h1 {
     margin: 0;
 }
+
+
+.recipe_list li {
+    list-style: none;
+}
+
+.button_list {
+    width: 200px;
+    height: 50px;
+    padding: 8px;
+    margin: 5px;
+}
