--- a/css/styles.css
+++ b/css/styles.css
@@ -1,89 +1,47 @@
-:root{
-    --primary-bg-color: #f0d1d1;
-    --secondary-bg-color: #2c0c21; /* header */
-    --primary-font-color: #fff;
-}
-
 body {
-    font-family: 'Times New Roman', Times, serif;
-    margin: 0px;
-    padding: 0px;
-    background-color: var(--primary-bg-color);
+  background-color: #d2bcd2;
 }
 
-header {
-    text-align: center;
-    background-color: var(--secondary-bg-color);
-    color: var(--primary-font-color);
-    padding: 20px 0;
-    margin: 0;
+.row{
+  margin-top: 100px;
+  margin-left: 50px;
+  margin-right: 50px; 
 }
 
-header h1 {
-    margin: 0;
+.list-btn{
+  text-transform: capitalize;
+  background-color: #d2bcd2;
+  color: #481736;
+  border: 1px solid #32655c;
+  font-family: 'Titan One', sans-serif;
+
+}
+.list-group-item{
+  background-color: #f7f2f5; 
+}
+.navbar-brand{
+  font-size: 36px;
+}
+.navbar {
+  background-color: #5f4268;
+  padding: 8px 24px;
 }
 
-
-.recipe-list li {
-    list-style: none;
+.form-inline {
+  margin-right: 10px; 
 }
 
-.button-list {
-    width: 200px;
-    height: 50px;
-    padding: 8px;
-    margin: 5px;
+#showNumberInNavbar {
+  margin-right: 20px; 
 }
 
-#modal-container {
-    display: none;
-  }
-  
-  #modal-container.is-visible {
-    position: fixed;
-    padding: 20px;
-    box-sizing: border-box;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    
-    /* to show it above other content */
-    z-index: 999; 
-    
-    /* to allow scrolling if the screen is not high enough*/
-    overflow: auto; 
-    
-    /* this is used to center the modal */
-    display: grid;
-    text-align: center;
-  }
-  
-  .modal {
-    margin: auto;
-    display: inline-block;
-    box-sizing: border-box;
-    background: #fff;
-    padding: 15px;
-    width: 100%;
-    max-width: 700px;
-    text-align: left;
-  }
-  
-  .modal-close {
-    float: right;
-    -webkit-appearance: none;
-    border: 0;
-    background: none;
-    color: #777;
-    text-decoration: underline;
-  }
-  
-  .modal h1 {
-    margin-top: 0;
-  }
-  
-  .modal p {
-    margin-bottom: 0;
-  }
+.searchButton {
+  background-color: #088259; 
+  color: #ffffff;
+}
+
+#titleModal{
+  text-transform: capitalize;
+  font-family: 'Titan One', sans-serif;
+  color: #03695b;
+}
